# 7-Flip-Display-Scoreboard

./: .clangd  .cproject  .project  CMakeLists.txt  partitions.csv  screenlog.0  sdkconfig  sdkconfig.defaults  sdkconfig.old
ScoreboardWatchApp/ScoreboardWatchApp Watch App/: ContentView.swift  ScoreboardWatchAppApp.swift
ScoreboardWatchApp/ScoreboardWatchApp Watch App/Models/: AppSettings.swift  ScoreboardDevice.swift  ScoreboardState.swift
ScoreboardWatchApp/ScoreboardWatchApp Watch AppTests/: ScoreboardWatchApp_Watch_AppTests.swift
ScoreboardWatchApp/ScoreboardWatchApp Watch AppUITests/: ScoreboardWatchApp_Watch_AppUITests.swift  ScoreboardWatchApp_Watch_AppUITestsLaunchTests.swift
ScoreboardWatchApp/ScoreboardWatchApp.xcodeproj/: project.pbxproj
ScoreboardiOSApp/: iosAppPlan.md
ScoreboardiOSApp/ScoreboardiOSApp/: ContentView.swift  Info.plist  ScoreboardiOSAppApp.swift
ScoreboardiOSApp/ScoreboardiOSApp.xcodeproj/: project.pbxproj
ScoreboardiOSApp/ScoreboardiOSAppTests/: ScoreboardiOSAppTests.swift
ScoreboardiOSApp/ScoreboardiOSAppUITests/: ScoreboardiOSAppUITests.swift  ScoreboardiOSAppUITestsLaunchTests.swift
front/: make_bin.bat
main/: 74AHC595.c  74AHC595.h  CMakeLists.txt  ble_debug.c  ble_debug.h  ble_scoreboard.c  ble_scoreboard.h  config.c  config.h  esp_rest_main.c  esp_rest_main.h  idf_component.yml  led.c  led.h  main.c  main.h  mqtt_com.c  mqtt_com.h  ota.c  ota.h  power_manager.c  power_manager.h  rest_server.c  rtc.c  rtc.h  status_led.c  status_led.h
server_certs/: ca_cert.pem
(+29 files in other folders)
